fix: line math render error

--- a/leetcode/1250_检查好数组.md
+++ b/leetcode/1250_检查好数组.md
@@ -19,9 +19,7 @@ tags:
 
 首先注意到，存在一个子集满足题设，等价于在全局大小满足题设，只需要将子集之外的系数取为$0$即可。所以题目等价于判断给定数组$[a_1, a_2, \dots, a_n]$，构造关于$x_i$的方程。
 
-$$
-	\sum_{i = 1}^n a_i x_i = 1
-$$
+$$ 	\sum_{i = 1}^n a_i x_i = 1 $$
 问，方程是否存在整数解。
 
 两个的情况下，即为贝祖定理的应用，当且仅当$\text{gcd}(a_1, a_2) = 1$时，以上方程有解。(证明是从两数字取其中一个为除数，另一个构成的同余量，乘上不同的$x_i$结果构成的环导出)
