--- a/leetcode/1739_放置盒子.md
+++ b/leetcode/1739_放置盒子.md
@@ -32,9 +32,7 @@ tags:
 
 对于这样完整的小堆，其边长$m$和堆上的方块数$S$的关系是
 
-$$
-S = \sum_{j = 1}^m \sum_{i=1}^j i = \sum_{j=1}^m \frac{j(j + 1)}{2} = \frac{m(m + 1)(m + 2)}{6}
-$$
+$$ S = \sum_{j = 1}^m \sum_{i=1}^j i = \sum_{j=1}^m \frac{j(j + 1)}{2} = \frac{m(m + 1)(m + 2)}{6} $$
 
 找到满足$S \leq n$的最大的$m$，是为阶段1，这里的寻找可以用二分查找，下界为$1$，上界为$n$。到这里底层拥有了$\frac{m(m+1)}{2}$个方块
 
