--- a/leetcode/1806_还原排列的最少操作步数.md
+++ b/leetcode/1806_还原排列的最少操作步数.md
@@ -57,9 +57,7 @@ class Solution:
 
 注意到有头尾两个显而易见的不动点$0, n - 1$，无需考虑他们，对于其余元素$i \in [1, n-1)$，上述两个等式可以合并为
 
-$$
-g(i) = 2i \mod (n - 1)
-$$
+$$ g(i) = 2i \mod (n - 1) $$
 
 题设目标是找到最小的$k$，使得$\forall i \in [1, n-1)$，$g^k(i) = 2^ki \mod(n - 1) \equiv i$。这里用穷举$k$搜索即可，而我们还可以从欧拉定理，证明出$k$的存在性，估计出$k$的上界，进而估计算法的时间复杂度
 
