--- a/leetcode/338_比特位计数.md
+++ b/leetcode/338_比特位计数.md
@@ -41,9 +41,7 @@ class Solution:
 1. 如何快速判断一个非负整数是否是2的幂次。注意到`i - 1`相对于`i`有如下性质，`i`的低位向上数直到的第一个`1`之间的`0`都被翻转成了`1`，而`i`的最低位的`1`被翻转成了`0`，之后的位不变。所以`i & (i - 1)`达成的效果是将`i`的最低位的`1`置零。而若此时得到数`0`，则`i`就是2的幂次。
 2. 对一个数`i`的位数计量，可以认为是`i`的最高位的`1`(假设是第`h`位)，加`i - 2^h`这个数，也即后续其他位的`1`来总计的，这样就构成了动态规划的状态转移方程
 
-$$
-f(i) = 1  \quad \text{if} \, i == 2^h \quad \text{else} \quad 1 + f(i - 2^h)
-$$
+$$ f(i) = 1  \quad \text{if} \, i == 2^h \quad \text{else} \quad 1 + f(i - 2^h) $$
 
 时间复杂度$O(n)$，空间复杂度$O(n)$(或不记返回值是$O(1)$)
 
