--- a/leetcode/45_跳跃游戏II.md
+++ b/leetcode/45_跳跃游戏II.md
@@ -34,9 +34,7 @@ tags:
 
 和[55_跳跃游戏](55_跳跃游戏.md)的动态规划类似，只是把状态变为整数，记录当前位置到达最后位置的最短跳数，状态转移方程
 
-$$
-dp[i] = \min(dp[i + 1], \dots, dp[i + 1 + nums[i]])
-$$
+$$ dp[i] = \min(dp[i + 1], \dots, dp[i + 1 + nums[i]]) $$
 从最后一个状态是$0$, 并开始向前迭代，返回`dp_state[0]`即可
 
 时间复杂度$O(n^2)$，空间复杂度$O(n)$
@@ -60,9 +58,7 @@ class Solution:
 
 那还剩下一个问题，如何记录`step`保证其最优性(类似跳跃游戏1的做法逐步给`i = i + 1`的方法记录的`step`显然不合理)。为此最优性，我们需要考虑往下跳一步时，多考虑再下一步，具体来说是，保证往下跳一步的那个位置，再往下一条，能扩展的`max_reach`最远，也即
 
-$$
-i_{\text{next}} = \arg\max_{j \in [i + 1, i + nums[i]]} (j + nums[j])
-$$
+$$ i_{\text{next}} = \arg\max_{j \in [i + 1, i + nums[i]]} (j + nums[j]) $$
 这样的话，每次跳跃的时候`max_reach`都能得到最大更新，得到的`step`自然是达到对应`max_reach`时最小的步数。(若不然，考虑回上一跳，选取其他位置起跳的情况下，按照这个$\arg\max$，其他位置到达`max_reach`的步数一定小于等于`step`，也即其他位置不一定可以一跳到达那么远)
 
 时间复杂度$O(n)$，空间复杂度$O(1)$
