--- a/leetcode/494_目标和.md
+++ b/leetcode/494_目标和.md
@@ -46,9 +46,7 @@ tags:
 
 从题设，输入的数都是非负数，所以自然地，最小的和就是所有数都添加负号而得。而当我们思考一个数的负号从负号翻到正号的时候，和其实是增加了`2 * nums[i]`倍。由此我们不难得到如下等价转换
 
-$$
-S = 2S_{+} - S_{\text{total}} = \text{target} \Rightarrow S_{+} = \frac{\text{target} + S_{\text{total}}}{2}
-$$
+$$ S = 2S_{+} - S_{\text{total}} = \text{target} \Rightarrow S_{+} = \frac{\text{target} + S_{\text{total}}}{2} $$
 
 所以问题也就变成了选取出部分正数，使其和为$\frac{\text{target} + S_{\text{total}}}{2}$的方案总数。那就有回溯剪枝、记忆化递归、背包dp的写法详见[0x01_递归_回溯_记忆化搜索_dp_背包dp串讲](0x01_递归_回溯_记忆化搜索_dp_背包dp串讲.md)
 
