--- a/leetcode/55_跳跃游戏.md
+++ b/leetcode/55_跳跃游戏.md
@@ -31,9 +31,7 @@ tags:
 
 若记录二值状态数组`dp[i]`，表示第`i`个位置是否可以到达最后一个下标，则自然地可以列出状态转移方程
 
-$$
-dp[i] = \text{any}(dp[i + 1], ..., dp[i + 1 + nums[i]])
-$$
+$$ dp[i] = \text{any}(dp[i + 1], ..., dp[i + 1 + nums[i]]) $$
 
 且状态转移起始点`n - 1`，按此从后向前迭代，最后返回`dp[0]`即可
 
