--- a/leetcode/1223_掷骰子模拟.md
+++ b/leetcode/1223_掷骰子模拟.md
@@ -31,13 +31,9 @@ tags:
 记录状态$s[i][j][k]$(都从0开始计)表示第$i + 1$次投掷后，投出点数是$j + 1$，且已经连续投了$k + 1$次的状态下，排列个数。则有状态转移规则:
 
 
-$$
-	s[i][j][0] = \sum_{j' \neq j}\sum_k s[i - 1][j'][k]
-$$
+$$ 	s[i][j][0] = \sum_{j' \neq j}\sum_k s[i - 1][j'][k] $$
 
-$$
-s[i][j][k] = s[i-1][j][k - 1]
-$$
+$$ s[i][j][k] = s[i-1][j][k - 1] $$
 
 注意到$i$这个轴向上，只依赖一步以前的状态，可以用滚动数组的思路优化(但要记得在状态迭代之前，先给$i$的所有状态置零，以防计算$i + 1$的时候错误引用到$i - 2$甚至更前的部分值)
 
