--- a/leetcode/1799_N次操作后的最大分数和.md
+++ b/leetcode/1799_N次操作后的最大分数和.md
@@ -40,9 +40,7 @@ tags:
 
 因为$1 \leq n \leq 7$，所以我们可以用一个整数$s$来表示`nums`中的删除状态，二进制中的第$i$位为`1`表示第$i$个数字还在数组，未被删除。则$dp[2^m-1]$ 即为所求。而起点是$dp[0] = 0$，Bellman方程为
 
-$$
-dp[s] = \max_{i, j \in s; i < j}\left\{dp[s - 2^i - 2^j] + \frac{t_s}{2} \text{gcd} (nums[i], nums[j]) \right\}
-$$
+$$ dp[s] = \max_{i, j \in s; i < j}\left\{dp[s - 2^i - 2^j] + \frac{t_s}{2} \text{gcd} (nums[i], nums[j]) \right\} $$
 
 其中$t_s$为$s$的二进制中$1$的个数。从迭代方程也很容易看出求解的先后关系，即大的$s$依赖小的$s$，所以递增上去求解，并排除奇数个二进制是1的状态即可
 
